--- a/Class Directory/Base.lproj/Main.storyboard
+++ b/Class Directory/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qud-6S-7u9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.9" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qud-6S-7u9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -70,7 +70,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gm7-0b-2zn">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Gm7-0b-2zn">
                                 <rect key="frame" x="213" y="313" width="175" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="175" id="HMP-VI-HL6"/>
@@ -221,7 +221,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DQt-wn-hRx">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="DQt-wn-hRx">
                                 <rect key="frame" x="213" y="275" width="175" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Emp-oL-OWM"/>
@@ -312,6 +312,14 @@
                                     <action selector="gitButtonHidden:" destination="p7B-ja-TLe" eventType="touchUpInside" id="i9a-hK-Wv7"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Zbf-OS-1hk">
+                                <rect key="frame" x="275" y="147" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="PNd-IX-Wtf"/>
+                                    <constraint firstAttribute="height" constant="50" id="Xmn-c3-Wee"/>
+                                    <constraint firstAttribute="width" constant="50" id="xMf-Uo-Uwf"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -337,6 +345,7 @@
                             <constraint firstItem="Gm7-0b-2zn" firstAttribute="centerX" secondItem="DQt-wn-hRx" secondAttribute="centerX" id="KWw-7E-GXJ"/>
                             <constraint firstAttribute="centerX" secondItem="Pq9-h6-OZQ" secondAttribute="centerX" id="Kvr-dd-hmn"/>
                             <constraint firstAttribute="centerX" secondItem="ryW-XZ-Req" secondAttribute="centerX" id="L4a-2z-pQM"/>
+                            <constraint firstItem="ryW-XZ-Req" firstAttribute="centerX" secondItem="Zbf-OS-1hk" secondAttribute="centerX" id="L4m-4V-gUY"/>
                             <constraint firstItem="51P-aw-vjh" firstAttribute="centerY" secondItem="7jt-G9-CdL" secondAttribute="centerY" id="Lom-00-BAO"/>
                             <constraint firstItem="dk9-yW-nzL" firstAttribute="leading" secondItem="51P-aw-vjh" secondAttribute="trailing" constant="8" id="M2O-yb-uns"/>
                             <constraint firstItem="299-Lw-gDw" firstAttribute="centerY" secondItem="lAW-Ug-yka" secondAttribute="centerY" id="PYO-Ik-W8k"/>
@@ -371,6 +380,7 @@
                             <constraint firstItem="CUj-0E-8im" firstAttribute="top" secondItem="ryW-XZ-Req" secondAttribute="bottom" constant="20" id="l5K-Dk-QGP">
                                 <variation key="heightClass=compact" constant="30"/>
                             </constraint>
+                            <constraint firstItem="ryW-XZ-Req" firstAttribute="centerY" secondItem="Zbf-OS-1hk" secondAttribute="centerY" id="og4-mr-Cu7"/>
                             <constraint firstAttribute="centerX" secondItem="51P-aw-vjh" secondAttribute="centerX" id="snK-fF-Nmc"/>
                             <constraint firstItem="TNW-pW-h1K" firstAttribute="top" secondItem="299-Lw-gDw" secondAttribute="bottom" constant="16" id="sr6-Nm-FLt"/>
                             <constraint firstItem="DQt-wn-hRx" firstAttribute="width" secondItem="ryW-XZ-Req" secondAttribute="width" id="tay-JB-ebt"/>
@@ -460,6 +470,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="activityIndicator" destination="Zbf-OS-1hk" id="pG4-8E-0e5"/>
                         <outlet property="firstNameField" destination="DQt-wn-hRx" id="TWq-Jn-EYd"/>
                         <outlet property="gitHubUserNameField" destination="299-Lw-gDw" id="1ce-MY-Ed1"/>
                         <outlet property="imageView" destination="ryW-XZ-Req" id="thB-PH-ZbS"/>
