--- a/Class Directory/Base.lproj/Main.storyboard
+++ b/Class Directory/Base.lproj/Main.storyboard
@@ -117,7 +117,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Github Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="299-Lw-gDw">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Github Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="299-Lw-gDw">
                                 <rect key="frame" x="213" y="351" width="175" height="30"/>
                                 <gestureRecognizers/>
                                 <constraints>
@@ -299,19 +299,6 @@
                                     <action selector="photoButtonPressed:" destination="p7B-ja-TLe" eventType="touchUpInside" id="5Ig-18-X2S"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lAW-Ug-yka">
-                                <rect key="frame" x="214" y="351" width="175" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="992-EL-9dp"/>
-                                    <constraint firstAttribute="height" constant="30" id="chS-Pq-UEl"/>
-                                </constraints>
-                                <state key="normal">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="gitButtonHidden:" destination="p7B-ja-TLe" eventType="touchUpInside" id="i9a-hK-Wv7"/>
-                                </connections>
-                            </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Zbf-OS-1hk">
                                 <rect key="frame" x="275" y="147" width="50" height="50"/>
                                 <constraints>
@@ -348,7 +335,6 @@
                             <constraint firstItem="ryW-XZ-Req" firstAttribute="centerX" secondItem="Zbf-OS-1hk" secondAttribute="centerX" id="L4m-4V-gUY"/>
                             <constraint firstItem="51P-aw-vjh" firstAttribute="centerY" secondItem="7jt-G9-CdL" secondAttribute="centerY" id="Lom-00-BAO"/>
                             <constraint firstItem="dk9-yW-nzL" firstAttribute="leading" secondItem="51P-aw-vjh" secondAttribute="trailing" constant="8" id="M2O-yb-uns"/>
-                            <constraint firstItem="299-Lw-gDw" firstAttribute="centerY" secondItem="lAW-Ug-yka" secondAttribute="centerY" id="PYO-Ik-W8k"/>
                             <constraint firstItem="Pq9-h6-OZQ" firstAttribute="top" secondItem="51P-aw-vjh" secondAttribute="bottom" constant="8" id="Ph6-bQ-FmL">
                                 <variation key="heightClass=compact" constant="12"/>
                             </constraint>
@@ -372,7 +358,6 @@
                             <constraint firstItem="299-Lw-gDw" firstAttribute="top" secondItem="Gm7-0b-2zn" secondAttribute="bottom" constant="12" id="gqg-pc-pA2">
                                 <variation key="heightClass=compact" constant="8"/>
                             </constraint>
-                            <constraint firstItem="299-Lw-gDw" firstAttribute="centerX" secondItem="lAW-Ug-yka" secondAttribute="centerX" constant="-1" id="iBl-Of-LQ3"/>
                             <constraint firstItem="ryW-XZ-Req" firstAttribute="leading" secondItem="KDF-3O-E0D" secondAttribute="leadingMargin" constant="-16" id="ixx-yt-xKK">
                                 <variation key="heightClass=compact" constant="30"/>
                             </constraint>
